fix: master: add group query param to get post endpoint
